# openai-agents-python

./: .env.example  Based on my examination of the workspace.yml  CLAUDE.md  README.md  agent_features_demo.py  combined_agents_debug.py  combined_agents_demo.py  core_concepts_demo.py  customer_support_system.py  demo1.py  demo2.py  mys.py  package-lock.json  package.json  test_tool.json  test_tool_keeper.py  test_url_error_handling.py  tool_keeper.py  workspace_reference.md
examples/: README.md  __init__.py  agent_template.py  core_concepts_demo.py
examples/shared/: __init__.py  utils.py
my_agents_project/: COMPUTER_AGENTS.md  README.md  pyproject.toml  test.sh
my_agents_project/my_openai_agents/core/: __init__.py  _utils.py  agent.py  agent_output.py  errors.py  exceptions.py  guardrail.py  handoffs.py  items.py  model.py  run.py  tool.py  usage.py
my_agents_project/my_openai_agents/core/computers/: __init__.py  computer.py  local_playwright.py  tools.py
my_agents_project/my_openai_agents/core/models/: __init__.py  openai_model.py
my_agents_project/my_openai_agents/examples/: calculator_agent.py  hello_world.py  interactive_browser.py  multi_agent_calculator.py
my_agents_project/my_openai_agents/examples/computer_agents/: browser_automation.py
my_examples/: README.md  core_concepts_demo.py
my_project/: workspace_agent.py
tests/: test_combined_agents.py  test_tool_keeper_unit.py
tool_keeper_agents/: __init__.py  analyzer.py  documenter.py  guardrails.py  judge.py  validator.py
workspace_master/: cli.py  requirements.txt
(+4 files in other folders)
