[tool.poetry]
name = "my-openai-agents"
version = "0.1.0"
description = "My OpenAI Agents Project"
authors = ["Scott <scott@example.com>"]
readme = "README.md"
packages = [{include = "my_openai_agents"}]

[tool.poetry.dependencies]
python = ">=3.9"
openai = ">=1.66.2"
pydantic = ">=2.10,<3"
griffe = ">=1.5.6,<2"
typing-extensions = ">=4.12.2,<5"
requests = ">=2.0,<3"
types-requests = ">=2.0,<3"
playwright = "^1.50.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
pytest-mock = ">=3.14.0"
mypy = "^1.4.1"
ruff = "0.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py39"
line-length = 120
select = ["E", "F", "B", "I", "N", "UP", "ICN", "RUF"]
ignore = []

[tool.ruff.isort]
force-single-line = true

[tool.poetry.scripts]
hello-world = "my_openai_agents.examples.hello_world:main"
calculator = "my_openai_agents.examples.calculator_agent:run"
multi-calculator = "my_openai_agents.examples.multi_agent_calculator:run"
browser-automation = "my_openai_agents.examples.computer_agents.browser_automation:run"
interactive-browser = "my_openai_agents.examples.interactive_browser:run"
